# fractal-gateway-v2

./: .gitignore  Makefile  README.md  pyproject.toml
fractal/gateway/: admin.py  apps.py  exceptions.py  models.py  signals.py  test_utils.py  urls.py  utils.py  views.py
fractal/gateway/controllers/: gateway.py  link.py
fractal/gateway/migrations/: 0001_initial.py  0002_migrate_gateways.py
fractal/gateway/nginx/: nginx.conf.template
fractal/gateway/resources/: docker-compose.yml
fractal/gateway/resources/client-link/: Dockerfile
fractal/gateway/resources/create-link/: entrypoint.sh
fractal/gateway/resources/gateway/: nginx.conf.template
fractal/gateway/tasks/: __init__.py
workflows/: ci.yaml
